# backend

./: docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2023-05-05_22-00_b69063b2574f.py  2023-05-05_22-37_e8b87886996f.py  2023-05-05_23-28_eda166fd66a9.py  2023-05-10_19-47_34a1663e3832.py  2023-05-17_14-17_0a61f21f7831.py  2023-05-18_22-00_88e527bdc3f3.py  2023-05-26_22-14_5dc619839dfc.py
vizme/: config.py  docs.py  exceptions.py  models.py
vizme/app/auth/: controllers.py  models.py  views.py
vizme/auth/: handlers.py  hash.py
vizme/db/: base.py  connection.py
vizme/tests/: conftest.py  test_auth.py  utils.py
vizme/tests/factories/: __init__.py  auth.py
